# Server_2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  CppDebugLibrary.props  CppReleaseLibrary.props  DllDebugCopy.props  DllReleaseCopy.props  GameServer.sln  GenPackets.bat  ProtobufLibrary.props  RTS.sln  RTSLibrary.props  SQLQuery1.sql  UnityBuild.props  VcpkgDebugLibrary.props  VcpkgLibrary.props  VcpkgReleaseLibrary.props  protobuf_release_library.props
Core/: CMakeLists.txt  Core.sln  Core.vcxproj  Core.vcxproj.filters  CoreMinimal.h  stdafx.h
Core/Concurrency/: MPSC.h
Core/Network/: Connection.cpp  Connection.h  Listener.cpp  Listener.h  Session.cpp  Session.h  SessionFactory.cpp  SessionFactory.h
Core/System/: DateTime.cpp  DateTime.h  Program.h  Scheduler.cpp  Scheduler.h  Singleton.h  String.cpp  String.h
RTS/: CMakeLists.txt  RTS.vcxproj  main.cpp  stdafx.h
Source/Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  CoreMinimal.h  Project.sln  stdafx.h
Source/Core/Common/: Utility.h
Source/Core/Concurrency/: MPSC.h
Source/Core/Container/: CircularBuffer.h  LruCache.cpp  LruCache.h  MPMC.cpp  MPMC.h  MPSC.cpp  MPSC.h  SList.cpp  SList.h  SPSC.cpp  SPSC.h  Source - 바로 가기.lnk
Source/Core/Http/: HttpEnums.cpp  HttpEnums.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
Source/Core/Json/: Json.cpp  Json.h  JsonFwd.h
Source/Core/Logging/: Logger.cpp  Logger.h
Source/Core/Math/: Integer.cpp  Integer.h  LinAlg.cpp  LinAlg.h  LinAlgebra.cpp  LinAlgebra.h
Source/Core/Math/Collision/: CapsuleCollider.h  Collider.h  Helper.h
Source/Core/Misc/: ApplyVariants.cpp  ApplyVariants.h  Crc32Hash.cpp  Crc32Hash.h  Utils.cpp  Utils.h
Source/Core/Network/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  BufferMemory.cpp  BufferMemory.h  BufferPool.cpp  BufferPool.h  Connection.cpp  Connection.h  IPAddress.cpp  IPAddress.h  Interface.h  Listener.cpp  Listener.h  NetworkStream.cpp  NetworkStream.h  OutputStream.cpp  OutputStream.h  PendingStream.cpp  PendingStream.h  Protocol.cpp  Protocol.h  ProtocolController.cpp  ProtocolController.h  Resolver.cpp  Resolver.h  SendNode.cpp  SendNode.h  Session.cpp  Session.h  SessionFactory.cpp  SessionFactory.h  Socket.cpp  Socket.h  StreamWriter.cpp  StreamWriter.h
Source/Core/Network/Packet/: Internal.cpp  Internal.h  Packet.h  PacketHandlerMap.cpp  PacketHandlerMap.h
Source/Core/Platform/: Windows.h
Source/Core/Sql/: Agent.cpp  Agent.h  Column.cpp  Column.h  Conn.cpp  Conn.h  Database.cpp  Database.h  Param.cpp  Param.h  Pool.cpp  Pool.h  Sql.h  SqlTypes.cpp  SqlTypes.h  Stmt.cpp  Stmt.h  StmtImpl.cpp
Source/Core/System/: Actor.cpp  Actor.h  Actor.hpp  AutoIncrement.cpp  AutoIncrement.h  Callable.cpp  Callable.h  Cast.cpp  Cast.h  Channel.cpp  Channel.h  Context.cpp  Context.h  DateTime.cpp  DateTime.h  Delegate.cpp  Delegate.h  DependencyInjection.cpp  DependencyInjection.h  Diagnostics.cpp  Diagnostics.h  Dispatcher.cpp  Dispatcher.h  Duration.cpp  Duration.h  Elapse.cpp  Elapse.h  Enum.cpp  Enum.h  Exceptions.h  ExecutionContext.cpp  ExecutionContext.h  FuncTraits.cpp  FuncTraits.h  Function.cpp  Function.h  Future.cpp  Future.h  Future.hpp  FutureController.cpp  (+43 more)
Source/Core/System/Detail/: AnyInvocable.cpp  AnyInvocable.h  AsyncResult.h  IMessage.cpp  IMessage.h  (+1 more)
Source/Protobuf/: CMakeLists.txt  Protobuf.filters  Protobuf.vcxproj  Protobuf.vcxproj.filters  stdafx.h
Source/Protobuf/Private/: GrpcHeader.cpp  HelloWorld.cpp  ProtoUtils.cpp  ProtobufDescriptor.cpp  ProtobufNode.cpp  ProtobufOutputStream.cpp  ProtobufSerializer.cpp  ProtobufSession.cpp  Types.cpp  User.cpp  World.cpp  types.pb.h  user.pb.cc
Source/Protobuf/Public/: GrpcHeader.h  HelloWorld.h  LobbyService.h  ProtoUtils.h  ProtobufDescriptor.h  ProtobufNode.h  ProtobufOutputStream.h  ProtobufProtocol.h  ProtobufSerializer.h  ProtobufSession.h  Types.h  User.h  World.h
Source/Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
Source/Server/Authenticator/: Authenticator.cpp  Authenticator.h
Source/Server/DataTable/: DataTable.h  FileReader.cpp  FileReader.h  SpawnerDataRecord.cpp  SpawnerDataRecord.h
Source/Server/Database/: DB.cpp  DB.h
Source/Server/GameFramework/: CollisionComponent.cpp  CollisionComponent.h  GameObjectComponent.cpp  GameObjectComponent.h
Source/Server/GameObject/: GameObject.cpp  GameObject.h  Npc.cpp  Npc.h  Pc.cpp  Pc.h  Projectile.cpp  Projectile.h
Source/Server/InterServer/: GrpcService.cpp  GrpcService.h  HelloWorldGreeterService.cpp  HelloWorldGreeterService.h  LobbyGrpcClient.cpp  LobbyGrpcClient.h  LobbyGrpcService.cpp  LobbyGrpcService.h
Source/Server/Model/: Account.cpp  Account.h  Character.cpp  Character.h  ClientAction.cpp  ClientAction.h  Combat.cpp  Combat.h  Movable.cpp  Movable.h  Player.cpp  Player.h  Server.cpp  Server.h  UniqueId.cpp  UniqueId.h
Source/Server/PacketHandler/: ClientPacketHandler.h  ServerPacketHandler.h
Source/Server/Protocol/: ClientHandlerMap.cpp  ClientHandlerMap.h  ClientProtocol.cpp  ClientProtocol.h  ServerHandlerMap.cpp  ServerHandlerMap.h  ServerProtocol.cpp  ServerProtocol.h
Source/Server/Section/: CollisionSystem.cpp  CollisionSystem.h  Section.cpp  Section.h  SectionComponent.cpp  SectionComponent.h  SectionRepository.cpp  SectionRepository.h  SpawnSystem.cpp  SpawnSystem.h
Source/Server/Service/: ClientServiceDef.cpp  ClientServiceDef.h  HandlerMap.cpp  HandlerMap.h  LobbyService.cpp  LobbyService.h  LobbyServiceDef.cpp  LobbyServiceDef.h  Protocol.h  Service.cpp  Service.h  ServiceBuilder.cpp  ServiceBuilder.h  WorldService.cpp  WorldService.h  WorldServiceDef.cpp  WorldServiceDef.h
Source/Server/Session/: ClientSession.cpp  ClientSession.h  LobbySession.cpp  LobbySession.h  ServerSession.cpp  ServerSession.h  SessionId.cpp  SessionId.h  WorldSession.cpp  WorldSession.h
Source/Server/Utilites/: Protobuf.h
Source/Server/World/: NeighborsLookup.cpp  NeighborsLookup.h  PlayerMovableTick.cpp  PlayerMovableTick.h  PlayerRepository.cpp  PlayerRepository.h  PlayerTick.cpp  PlayerTick.h
(+100 files in other folders)
